--- a/css/app.css
+++ b/css/app.css
@@ -3,3 +3,68 @@
     height: 55px;
     padding-top: 5px;
 }
+/* --- */
+
+.logo-container .logo{
+    overflow: hidden;
+    width: 50px;
+    float: left;
+}
+
+.logo-container .brand{
+    font-family: Roboto;
+    font-size: 30px;
+    color: #FFFFFF;
+    line-height: 30px;
+    float: left;
+    margin-left: 15px;
+    margin-top: 7px;
+    width: 70px;
+    height: 40px;
+    text-align: left;
+}
+
+.logo-container .brand-material{
+    font-size: 18px;
+    margin-top: 15px;
+    height: 25px;
+    width: auto;
+}
+.logo-container .logo img{
+    width: 100%;
+}
+.navbar-small .logo-container .brand{
+    color: #333333;
+}
+
+
+.main .container {
+    min-height: 95vh;
+    margin-top: 70px;
+    padding-top: 50px;
+}
+
+
+.notification {
+    z-index: 999 !important;
+    position: fixed;
+    top: 70px !important;
+    left: 0;
+    width: 100%;
+    opacity: 0.98;
+    color: #252525;
+}
+
+.notification .close i {
+    font-size: 28px;
+    color: #252525;
+}
+
+.notification p {
+    font-size: 20px;
+}
+
+.dump {
+    display: block;
+    z-index: 99999;
+}
