style(showProfile): Adding a background image for each profile

--- a/css/app.css
+++ b/css/app.css
@@ -71,6 +71,20 @@
 
 /* Profile page */
 
+.parallax {
+    /* The image used */
+    background-image: url("../images/bg-head.jpg");
+
+    /* Set a specific height */
+    min-height: 200px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .icon-min {
     font-size: 18px;
 }
