style(chat): could resize chat - add fullscreen mode

--- a/css/chat.css
+++ b/css/chat.css
@@ -14,15 +14,24 @@
 
 #chat-global {
     display: none;
-    z-index: 999;
+    z-index: 99999;
     position: fixed;
     bottom: 0;
     right: 30px;
     width: 300px;
     height: 370px;
 
+    /*min-width: 300px;
+    min-height: 370px;*/
+
+    max-width: 100%;
+    max-height: calc(100% - 70px);
+
     margin-bottom: 0 !important;
     border-radius: 0 !important;
+    box-shadow: 2px 15px 13px #cdcdcd;
+    border: 0;
+    background: #fff;
 }
 
 #chat-global .chat-header {
@@ -68,21 +77,29 @@
     font-weight: bold;
 }
 
+#chat-up {
+    position: absolute;
+    right: 10px;
+    top: 2px;
+    font-size: 25px;
+}
+
 #chat-messages {
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     overflow-y: scroll;
 }
 
 #chat-area textarea {
     bottom: -50px;
     position: absolute;
-    width: 220px;
+    width: calc(100% - 50px);
 }
 
 #chat-send {
     position: relative;
-    right: -118px;
+    float: right;
+    right: 0px;
     bottom: 5px;
     padding: 8px;
 }
