--- a/css/chat.css
+++ b/css/chat.css
@@ -5,16 +5,32 @@
     width: 300px;
     height: 30px;
     position: fixed;
-    z-index: 8888;
+    z-index: 8889;
     bottom: 0;
     right: 30px;
     border-radius: 0;
     box-shadow: none !important;
 }
 
+#chat-notif {
+    display: block;
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    position: absolute;
+    top: -12px;
+    left: -12px;
+    z-index: 9999;
+    background-color: #E8980C;
+}
+
+#chat-notif i {
+    font-size: 16px !important;
+}
+
 #chat-global {
     display: none;
-    z-index: 99999;
+    z-index: 8888;
     position: fixed;
     bottom: 0;
     right: 30px;
@@ -40,6 +56,7 @@
     border-radius: 0 !important;
     box-shadow: none !important;
     min-height: 30px !important;
+    margin-bottom: 0;
 }
 
 #chat-global .chat-header:hover, #chat-fake:hover {
@@ -84,10 +101,23 @@
     font-size: 25px;
 }
 
+
+#chat-global .content {
+    padding: 0 !important;
+}
+
+#chat-content hr {
+    margin: 0 auto;
+}
+
 #chat-messages {
     width: 100%;
-    height: 200px;
+    height: 253px;
     overflow-y: scroll;
+}
+
+#chat-area {
+    padding: 0 10px;
 }
 
 #chat-area textarea {
